@@ -5,6 +5,13 @@ Description
 -----------
 
 A basic CURL wrapper written in PHP
+See [http://php.net/curl](http://php.net/curl) for more information about the libcurl extension for PHP
+
+
+Installation
+------------
+
+git clone git://github.com/shuber/curl.git
 
 
 Usage
